--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lemon&display=swap');
 :root{
-    --main-color:#9045E6;
+    --main-color:#0051ff;
 }
 
 *{
@@ -22,12 +22,16 @@ html{
 }
 
 body{
-    background: #BFA6E9;
+    background: #ffee00;
     padding-left: 30rem;
 }
 
 section{
     padding:1rem 5%;
+    min-height: 100vh;
+}
+
+.contact{
     min-height: 100vh;
 }
 
@@ -314,13 +318,14 @@ header .follow a:hover{
     background:#fff;
     border-radius: .5rem;
     box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
+    height: 50rem;
 }
 
 .service .box-container .box i{
-    height:6rem;
-    width:6rem;
-    line-height: 6rem;
-    font-size: 2.5rem;
+    height:12rem;
+    width:12rem;
+    line-height: 12rem;
+    font-size: 5rem;
     color:#fff;
     background:var(--main-color);
     border-radius: 50%;
@@ -328,14 +333,14 @@ header .follow a:hover{
 
 .service .box-container .box h3{
     color:#444;
-    font-size: 2.2rem;
+    font-size: 4rem;
     padding-top: 1rem;
 }
 
 .service .box-container .box p{
     color:#666;
-    font-size: 1.7rem;
-    padding-top: .5rem;
+    font-size: 2.5rem;
+    padding-top: 1.5rem;
 }
 
 .experience .box-container{
@@ -345,7 +350,7 @@ header .follow a:hover{
 
 .experience .box-container .box{
     position: relative;
-    flex:1 1 33rem;
+    flex:1 1 50rem;
     border-left: .2rem solid var(--main-color);
     padding-left: 2rem;
     padding-right: 2rem;
@@ -367,6 +372,7 @@ header .follow a:hover{
     padding:1.5rem;
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
     border-radius: .5rem;
+    height: 20rem;
 }
 
 .experience .box-container .box .content span{
@@ -492,16 +498,10 @@ header .follow a:hover{
 .contact .row{
     display: flex;
     flex-wrap: wrap;
-    gap:1.5rem;
+    gap:1rem;
 }
 
-.contact .row form{
-    flex:1 1 55rem;
-    background:#fff;
-    padding:0 2rem;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-    border-radius: .5rem;
-}
+
 
 .contact .row .map{
     flex:1 1 25rem;
@@ -550,16 +550,43 @@ header .follow a:hover{
     box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
     border-radius: .5rem;
     font-size: 34px;
+    cursor: pointer;
 }
 
 .conteudo-principal-escrito-botao-2:hover {
-    background-color: rgba(236, 214, 196, 0.53);
-  }
+    background-color: rgb(159, 152, 255);
+}
 
 .laranjinha{
-color: #343C45;
-
+    color: #343C45;
 }
+
+.vagas-instagram{
+    font-size: 16px;
+}
+
+.imagem-contato{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50%;
+    width: 50%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.mensagem-final{
+    font-family: 'Lemon', cursive;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 48px;
+    color: #0051ff;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
 
 .footer{
     margin-top: 2rem;
